--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["env","react"]
+  "presets": [//设定转码规则
+    "env",
+    "es2015",
+    "react",
+    "stage-0",
+    "stage-2"
+  ]
 }
