--- a/package.json
+++ b/package.json
@@ -21,19 +21,24 @@
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.2.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-typescript": "^0.12.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "moment": "^2.22.2",
+    "redux": "^4.0.0",
     "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
     "typescript-eslint-parser": "^17.0.1",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
